<resources>
    <string name="app_name">Rain</string>
    <string name="agent_sign_in_title">agent sign in</string>
    <string name="agent_user_id">user ID</string>
    <string name="agent_password">password</string>
    <string name="str_exit">exit</string>
    <string name="str_sign_in">sign in</string>

    <!--Welcome menu-->
    <string name="welcome_menu_title">welcome to rain</string>
    <string name="welcome_menu_shop_rain">shop rain</string>
    <string name="welcome_menu_collect_my_sim">collect my SIM</string>

    <!--Client login-->
    <string name="client_login_title">client sign in</string>
    <string name="client_login_enter_id">enter ID number</string>
    <string name="client_sign_in_no_order_dialog_title">You currently do not have any orders for collection. \nIf you would like to order, simply click shop rain\non the home screen.</string>
    <string name="client_sign_in_no_order_dialog_btn_1">exit</string>
    <string name="client_sign_in_no_order_dialog_btn_2">home</string>
    <string name="manual_address_title">Please add your home address</string>

    <!--dashboard-->
    <string name="str_proceed">proceed</string>
    <string name="str_proceed_to_rica">proceed to RICA</string>
    <string name="str_rica">RICA</string>
    <string name="text_scan_id_home_desc">South African ID\'s only\n\nID book: bar code page only\nID card: scan both sides \nPassport: bar code page only</string>
    <string name="scan_below">scan below</string>
    <string name="id_verified">ID verified</string>
    <string name="scan_id">Scan ID</string>

    <!--Rica agent declaration-->
    <string name="rica_verify_title">RICA agent \nverification</string>
    <string name="rica_verify_desc">I hereby solemnly affirm that the attached are the true copies of the originals as viewed by myself and that no amendments have been made on the original documents.</string>
    <string name="rica_verify_done_title">RICA verified</string>
    <string name="cb_verify_desc">Click on check box to verify.</string>
    <string name="poa_title">Proof of address</string>
    <string name="poa_verified_title">Proof of address verified</string>
    <string name="capture_manual">Manually Capture</string>
    <string name="select_your_address">select your address</string>
    <string name="suburb">Suburb*</string>
    <string name="street_address">Street Address*</string>
    <string name="address">Address</string>
    <string name="town">Town*</string>
    <string name="province">Province*</string>
    <string name="ok">Ok</string>
    <string name="south_african_id_book">South African\nID Book</string>
    <string name="south_african_id_card">South African\nID Card</string>
    <string name="south_african_passport">South African\nPassport</string>
    <string name="capture">capture</string>
    <string name="accept">accept</string>
    <string name="retake">retake</string>
    <string name="exit_dialog_title">Are you sure you want to leave?</string>
    <string name="exit_dialog_content">If you leave now you will have to start over again.</string>
    <string name="no_btn">No</string>
    <string name="yes_btn">Yes</string>
    <string name="select_your_id_type">select your ID type</string>

    <!--Select Quantity-->
    <string name="select_quantity_title">select quantity</string>
    <string name="select_quantity_desc">R50 once off</string>
    <string name="select_quantity_desc1">SIM + 10 data days</string>
    <string name="select_quantity_desc2">R50 a gig</string>
    <string name="pay_at_end">pay at the end of the month</string>
    <string name="cart_summary">cart summary</string>
    <string name="sub_total">sub total </string>
    <string name="sub_total_item">(1 item)</string>
    <string name="total">total</string>
    <string name="country_prompt">Choose a country</string>
    <string name="r50_a_gig">R50 a gig</string>
    <string name="sim_10_data_days">SIM +10 data days</string>
    <string name="r50_once_off">R50 once off</string>
    <string name="sim_activation_success">SIM activation successful</string>
    <string name="sim_iccid">ICCID: </string>
    <string name="sim_more_info">visit rain.co.za to manage your SIM via your rain dashboard</string>
    <string name="str_dispense_next_sim">dispense next SIM</string>
    <string name="sim_dispensing_sim">dispensing SIM</string>
    <string name="sim_dispensing_error_title">We are currently unable to dispense any SIMs,\nplease try again later.</string>
    <!-- Create account -->
    <string name="create_account_title">create account</string>
    <string name="email_error">please add a valid email</string>
    <string name="confirm_email_error">email address does not match</string>
    <string name="password_error">password must contain 8 characters or more with at least one number.</string>
    <string name="confirm_password_error">password does not match</string>
    <string-array name="text_strength">
        <item>Weak</item>
        <item>Relatively Weak</item>
        <item>Medium</item>
        <item>Strong</item>
    </string-array>

    <string name="already_login">A session is currently in progress, please complete session or logout and try again.</string>
    <string name="agent_not_found">You have entered an incorrect username or password</string>

</resources>
