<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context=".StartActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <ImageView
            android:id="@+id/imgSuccess"
            android:layout_width="270dp"
            android:layout_height="240dp"
            android:src="@drawable/checkbox_verify"/>

        <TextView
            android:id="@+id/txtSuccessTitle"
            style="@style/TextTitle"
            android:layout_toRightOf="@+id/imgSuccess"
            android:layout_marginBottom="20dp"
            android:text="@string/sim_activation_success" />

        <TextView
            android:id="@+id/txtIccId"
            style="@style/TextTitle"
            android:layout_toRightOf="@+id/imgSuccess"
            android:layout_below="@+id/txtSuccessTitle"
            android:layout_marginBottom="20dp"
            android:text="@string/sim_iccid" />

        <TextView
            android:id="@+id/txtSimNo"
            style="@style/TextTitle"
            android:layout_toRightOf="@+id/txtIccId"
            android:layout_below="@+id/txtSuccessTitle"
            android:layout_marginBottom="20dp"
            android:text="@string/sim_no" />

        <TextView
            android:id="@+id/txtMoreInfo"
            style="@style/TextTitle"
            android:layout_toRightOf="@+id/imgSuccess"
            android:layout_below="@+id/txtIccId"
            android:text="@string/sim_more_info" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnExit"
        style="@style/BtnNavigate"
        android:text="@string/str_exit"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnProceed"
        style="@style/BtnNavigate"
        android:layout_width="@dimen/btn_navigate_right_width"
        android:enabled="false"
        android:text="@string/str_proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>