<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context=".StartActivity">

    <TextView
        style="@style/TextTitle"
        android:text="@string/client_login_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <TextView
            style="@style/TextTitle"
            android:layout_marginBottom="20dp"
            android:text="@string/client_login_enter_id" />

        <EditText
            android:id="@+id/edUserId"
            style="@style/InputText"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnExit"
        style="@style/BtnNavigate"
        android:text="@string/str_exit"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnProceed"
        style="@style/BtnNavigate"
        android:layout_width="@dimen/btn_navigate_right_width"
        android:enabled="false"
        android:text="@string/str_proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>