<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/default_card_width"
        android:layout_height="@dimen/default_card_height"
        android:layout_gravity="center"
        android:background="@drawable/bg_card_view_shadow"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextTitle"
            android:layout_marginTop="@dimen/dialog_margin_top_bot"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="0.8"
            android:text="@string/client_sign_in_no_order_dialog_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/default_image_size"
            android:layout_height="@dimen/default_image_size"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toTopOf="@id/containerBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <LinearLayout
            android:id="@+id/containerBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dialog_margin_top_bot"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/btnMainMenu"
                style="@style/Btn.Dialog.Negative"
                android:layout_marginEnd="@dimen/dialog_btn_gap"
                android:text="@string/client_sign_in_no_order_dialog_btn_1"/>

            <Button
                android:id="@+id/btnWelcomeScreen"
                style="@style/Btn.Dialog"
                android:text="@string/client_sign_in_no_order_dialog_btn_2" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvApiCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="Api Code" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
